ajustes e listar todas as vendas